--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ backports.zoneinfo==0.2.1
 beautifulsoup4==4.11.1
 Django==4.1.1
 django-bootstrap-v5==1.0.11
+gunicorn==20.1.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
 tzdata==2022.4
+whitenoise==6.2.0
