--- a/.gitignore
+++ b/.gitignore
@@ -50,7 +50,7 @@ var/
 .installed.cfg
 *.egg
 
-__init__.py
+#__init__.py
 # PyInstaller
 #  Usually these files are written by a python script from a template
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
